@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<Element1 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="CASTOR-1392.xsd" Attr="red"/>
